--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "yrd1",
+  "name": "@yrd1/yrd1",
   "version": "1.0.0",
   "description": "Utilities for other projects",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 0"
   },
   "repository": {
     "type": "git",
